[project]
name = "py-cputools"
version = "0.0.1"
authors = [
  { name="Jianzhu Zhang", email="jianzhan@gmail.com" },
]
description = "Py-cputools is used by container apps to for CPU control/query"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
[project.urls]
"Homepage" = "https://github.com/jianzzha/py-cputools"
"Bug Tracker" = "https://github.com/jianzzha/py-cputools/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
